<resources>
    <string name="app_name">ESAKE</string>
    <!-- Menu Titles -->
    <string name="title_home">Home</string>
    <string name="title_league_table">League Table</string>
    <string name="title_team_stats">Team Stats</string>
    <string name="title_player_stats">Player Stats</string>
    <string name="title_top5">Top 5</string>
    <!-- Other Titles -->
    <string name="title_home_stats_manager">Games</string>
    <string name="title_activity_login">Login</string>
    <!-- For Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"Log In"</string>
    <string name="loginPage">"Log In"</string>
    <string name="choose_user_type">Choose User Type</string>
    <string name="stats_manager">Stats Manager</string>
    <string name="user">User</string>
    <string name="logo">The app logo</string>
    <string name="continue_as_user">Continue As User</string>
    <!-- Top 5 Page -->
    <string name="spinner">spinner</string>
    <string name="top5_rating">Rating</string>
    <string name="top5_player_name">Player 1</string>
    <string name="top5_player_position">PG</string>
    <string name="top5_player_rating">5</string>
    <string name="top5_position">Position</string>
    <string name="top5_name">Player Name</string>
    <string name="top5_player_image">Player Image</string>
    <!-- Home Page Stats Manager -->
    <string name="action_stats">Watch Game</string>
    <string name="Gameweek_stats">Gameweek #</string>
    <string name="dash">-</string>
    <string name="home_score_stats">100</string>
    <string name="away_score_stats">2</string>
    <string name="home_team_stats">Home Team</string>
    <string name="away_team_stats">Away Team</string>
    <string name="gametime_stats">10 \'</string>
    <!-- Game Management Page Stats Manager -->
    <string name="home_team_logo">home team logo</string>
    <string name="away_team">Away Team</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Home Page User -->
    <string name="esake_logo_no_text">ESAKE Logo No Text</string>
    <string name="fixture_preview_team1_logo">Home Team Logo</string>
    <string name="fixture_preview_team2_logo">Away Team Logo</string>
    <string name="gameweek_watch_gameButton">Watch Game</string>
    <string name="gameweek_selector">Gameweek Selection Spinner</string>
    <string name="gameweek_preview_score1">Score 1</string>
    <string name="gameweek_preview_score2">Score 2</string>
    <string name="gameweek_team1_logo">Left Team Logo in Gameweek Selection</string>
    <string name="gameweek_team2_logo">Right Team Logo in Gameweek Selection</string>
    <string name="gameweekDashBetweenScores">-</string>
    <string name="home_team_user">Home Team</string>
    <string name="home_score_user">100</string>
    <string name="away_score_user">20</string>
    <string name="gametime_user">10\'</string>
    <string name="away_team_user">Away Team</string>
    <!-- League Table Page User -->
    <string name="league_table_team_name">Team</string>
    <string name="league_table_games">Games</string>
    <string name="league_table_points">Points</string>
    <string name="league_table_wins">Wins</string>
    <string name="league_table_losses">Losses</string>
    <string name="league_table_team_logo">Team Logo in Table</string>
    <string name="league_table_teamName">Team Name</string>
    <string name="league_table_games_value">5</string>
    <string name="league_table_points_value">5</string>
    <string name="league_table_wins_value">5</string>
    <string name="league_table_losses_value">5</string>
    <!-- Tabbed User -->
    <string name="tab_1_user">Game Overview</string>
    <string name="tab_2_user">Team Stats</string>
    <string name="tab_3_user">Player Stats</string>
    <string name="tab_4_user">Lineups</string>
    <!-- Tabbed View Manager -->
    <string name="tab_1">Game Overview</string>
    <string name="tab_2">Manage Game</string>
    <string name="tab_3">Manage Team</string>
    <!-- Team Management Page Stats Manager -->
    <string name="starting_lineup_stats_manager">Starting</string>
    <string name="substitutes_stats_manager">Substitutes</string>
    <!-- OverView Page Stats Manager -->
    <string name="homeTeamSM">team 1</string>
    <string name="awayTeamSM">team 2</string>
    <string name="SSM">S</string>
    <string name="Q1SM">Q1</string>
    <string name="Q2SM">Q2</string>
    <string name="Q3SM">Q3</string>
    <string name="Q4SM">Q4</string>
    <string name="SHomeSM">100</string>
    <string name="Q1HomeSM">20</string>
    <string name="Q2HomeSM">30</string>
    <string name="Q3HomeSM">30</string>
    <string name="Q4HomeSM">20</string>
    <string name="SAwaySM">90</string>
    <string name="Q1AwaySM">35</string>
    <string name="Q2AwaySM">20</string>
    <string name="Q3AwaySM">25</string>
    <string name="Q4AwaySM">10</string>
    <string name="playing">Lineups</string>
    <!-- Team Stats Page User -->
    <string name="team_stats_team_name">Team</string>
    <string name="team_stats_pts">PTS</string>
    <string name="team_stats_fg">FG</string>
    <string name="team_stats_reb">REB</string>
    <string name="team_stats_ast">AST</string>
    <string name="team_stats_stl">STL</string>
    <string name="team_stats_blk">BLK</string>
    <string name="team_stats_pts_value">5</string>
    <string name="team_stats_fg_value">5</string>
    <string name="team_stats_reb_value">5</string>
    <string name="team_stats_ast_value">5</string>
    <string name="team_stats_stl_value">5</string>
    <string name="team_stats_blk_value">5</string>
    <string name="team_stats_teamName">Team Name</string>
    <string name="team_stats_team_logo">Team Logo in Team Stats</string>
    <!-- Player Stats Page User -->
    <string name="player_stats_player_name">Player Name</string>
    <string name="player_stats_pts">PTS</string>
    <string name="player_stats_team_logo">Team Logo in Player Stats</string>
    <string name="player_stats_playerName">Player Name</string>
    <string name="player_stats_fg">FG</string>
    <string name="player_stats_reb">REB</string>
    <string name="player_stats_ast">AST</string>
    <string name="player_stats_stl">STL</string>
    <string name="player_stats_blk">BLK</string>
    <string name="player_stats_pts_value">5</string>
    <string name="player_stats_fg_value">5</string>
    <string name="player_stats_reb_value">5</string>
    <string name="player_stats_ast_value">5</string>
    <string name="player_stats_stl_value">5</string>
    <string name="player_stats_blk_value">5</string>
    <string name="table_team_name">Team</string>
    <string name="table_games_number">Games</string>
    <string name="table_points_number">Points</string>
    <string name="table_wins_value">Wins</string>
    <string name="table_losses_value">Losses</string>
    <string name="team_name_table">Team</string>
    <string name="table_team_logo">Team logo</string>
    <string name="table_games_value">Value</string>
</resources>