<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/team_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentTeamStats">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/team_stats_header"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/team_stats_team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/team_stats_team_name"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team_stats_pts"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginLeft="54dp"
            android:gravity="center"
            android:text="@string/team_stats_pts"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/team_stats_fg"
            app:layout_constraintStart_toEndOf="@id/team_stats_team_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team_stats_fg"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/team_stats_fg"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/team_stats_reb"
            app:layout_constraintStart_toEndOf="@id/team_stats_pts"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team_stats_reb"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/team_stats_reb"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/team_stats_ast"
            app:layout_constraintStart_toEndOf="@id/team_stats_fg"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team_stats_ast"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/team_stats_ast"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/team_stats_stl"
            app:layout_constraintStart_toEndOf="@id/team_stats_reb"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team_stats_stl"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/team_stats_stl"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/team_stats_blk"
            app:layout_constraintStart_toEndOf="@id/team_stats_ast"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team_stats_blk"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/team_stats_blk"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/team_stats_stl"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/teamStatsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_stats_header"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <ImageView
                android:id="@+id/team_stats_team_logo"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:contentDescription="@string/team_stats_team_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/esake_logo"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/team_stats_teamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/team_stats_teamName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/lineBetweenTeamAndPoints"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/team_stats_team_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <View
                android:id="@+id/lineBetweenTeamAndPoints"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:background="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.399"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/team_stats_pts_value"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team_stats_pts_value"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/team_stats_fg_value"
                app:layout_constraintStart_toEndOf="@id/lineBetweenTeamAndPoints"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/team_stats_fg_value"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team_stats_fg_value"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/team_stats_reb_value"
                app:layout_constraintStart_toEndOf="@id/team_stats_pts_value"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/team_stats_reb_value"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team_stats_reb_value"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/team_stats_ast_value"
                app:layout_constraintStart_toEndOf="@id/team_stats_fg_value"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/team_stats_ast_value"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team_stats_ast_value"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/team_stats_stl_value"
                app:layout_constraintStart_toEndOf="@id/team_stats_reb_value"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/team_stats_stl_value"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team_stats_stl_value"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/team_stats_blk_value"
                app:layout_constraintStart_toEndOf="@id/team_stats_ast_value"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/team_stats_blk_value"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team_stats_blk_value"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/team_stats_stl_value"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>