<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".IndexPage">

    <Button
        android:id="@+id/button_user"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_buttons_for_index_page"
        android:text="@string/user"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_User_Type"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/button_stats_manager"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_buttons_for_index_page"
        android:text="@string/stats_manager"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_User_Type"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/choose_User_Type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_user_type"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/esakeLogoIndex"
        android:layout_width="160dp"
        android:layout_height="130dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/choose_User_Type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/esake_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>