<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginRight="6dp"
    android:background="@android:color/white"
    app:layout_constraintVertical_bias="0.5">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/fixture_team1_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/fixture_preview_team1_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/gameweek_preview_team1_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginLeft="9dp"
                android:text="@string/gameweek_preview_score1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fixture_team1_logo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gameweek_preview_team2_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="228dp"
                android:layout_marginRight="228dp"
                android:text="@string/gameweek_preview_score2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.517" />

            <ImageView
                android:id="@+id/fixture_team2_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/fixture_preview_team2_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <Button
                android:id="@+id/gameweek_preview_gameButton"
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:text="@string/gameweek_watch_gameButton"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/betweenScoresDash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/dash"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gameweek_preview_team2_score"
                app:layout_constraintHorizontal_bias="0.027"
                app:layout_constraintStart_toEndOf="@+id/gameweek_preview_team1_score"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.517" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>